Kubernetes/order-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: order-db
  name: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ofos-default: "true"
        io.kompose.service: order-db
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "true"
            - name: SA_PASSWORD
              value: S3cur3P@ssW0rd!
          image: mcr.microsoft.com/mssql/server:2022-latest
          name: order-db
          ports:
            - containerPort: 1433
          resources: {}
          volumeMounts:
            - mountPath: /var/opt/data
              name: order-db-data
      restartPolicy: Always
      volumes:
        - name: order-db-data
          persistentVolumeClaim:
            claimName: order-db-data
status: {}
