Kubernetes/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: order-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ofos-default: "true"
        io.kompose.service: order-service
    spec:
      containers:
        - env:
            - name: ConnectionStrings__OrderDb
              value: Server=order-db;Database=master;User=sa;Password=S3cur3P@ssW0rd!;Encrypt=false
            - name: MicroServices__UserService
              value: http://user-service
            - name: RabbitMq__Host
              value: rabbitmq
            - name: RabbitMq__Password
              value: rabbitmqpassword
            - name: RabbitMq__Port
              value: "5672"
            - name: RabbitMq__Username
              value: rabbitmquser
          image: registry.hub.docker.com/jurgenks/order-service:latest
          name: order-service
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
