Kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: user-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ofos-default: "true"
        io.kompose.service: user-service
    spec:
      containers:
        - env:
            - name: ConnectionStrings__UserDb
              value: Server=user-db;Database=master;User=sa;Password=S3cur3P@ssW0rd!;Encrypt=false
            - name: RabbitMq__Host
              value: rabbitmq
            - name: RabbitMq__Password
              value: rabbitmqpassword
            - name: RabbitMq__Port
              value: "5672"
            - name: RabbitMq__Username
              value: rabbitmquser
          image: ofosregistry.azurecr.io/user-service
          name: user-service
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
