Kubernetes/notification-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: notification-db
  name: notification-db
spec:
  ports:
    - name: "1437"
      port: 1437
      targetPort: 1433
  selector:
    io.kompose.service: notification-db
status:
  loadBalancer: {}
