Kubernetes/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: order-service
  name: order-service
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 80
  selector:
    io.kompose.service: order-service
status:
  loadBalancer: {}
