Kubernetes/payment-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: payment-db
  name: payment-db
spec:
  ports:
    - name: "1435"
      port: 1435
      targetPort: 1433
  selector:
    io.kompose.service: payment-db
status:
  loadBalancer: {}
