Kubernetes/payment-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: payment-service
  name: payment-service
spec:
  ports:
    - name: "8002"
      port: 8002
      targetPort: 80
  selector:
    io.kompose.service: payment-service
status:
  loadBalancer: {}
