Kubernetes/restaurant-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: restaurant-service
  name: restaurant-service
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    io.kompose.service: restaurant-service
status:
  loadBalancer: {}
