Kubernetes/user-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: user-db
  name: user-db
spec:
  ports:
    - name: "1434"
      port: 1434
      targetPort: 1433
  selector:
    io.kompose.service: user-db
status:
  loadBalancer: {}
