Kubernetes/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: user-service
  name: user-service
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 80
  selector:
    io.kompose.service: user-service
status:
  loadBalancer: {}
